@@ -12,6 +12,7 @@ from /var/log/wmbusmeters/meter_readings to /var/lib/wmbusmeters/meter_readings
 This only affects new installations. Existing conf files will use the old location
 as specified int the conf file.
 
+Added apator172 water meter.
 Added qualcosonic heating/cooling meter.
 Added ei6500 smoke detector.
 Added kampress pressure sensor.
